--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <h2>Want to Create and Manage your Database??</h2>
         <form class="form">
             <input type="text" name="" id="name" placeholder="Enter Name" required>
-            <input type="email" name="" id="email" placeholder="Enter Email" required>
+            <input type="email" name="" id="email" placeholder="Enter Email" >
             <input type="tel" name="" id="number" placeholder="Enter Number" required>
             <input type="submit" value="Create" class="btn form-btn">
         </form>
+        <p class="red">Please enter Email address</p>
     </section>
     <section>
         <table class="table">
